; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps_table.c_mps_print_scsiio_cmd.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/mps/extr_mps_table.c_mps_print_scsiio_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mps_softc = type { i32 }
%struct.mps_command = type { i64 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mps_print_scsiio_cmd(%struct.mps_softc* %0, %struct.mps_command* %1) #0 {
  %3 = alloca %struct.mps_softc*, align 8
  %4 = alloca %struct.mps_command*, align 8
  %5 = alloca %struct.TYPE_2__*, align 8
  store %struct.mps_softc* %0, %struct.mps_softc** %3, align 8
  store %struct.mps_command* %1, %struct.mps_command** %4, align 8
  %6 = load %struct.mps_command*, %struct.mps_command** %4, align 8
  %7 = getelementptr inbounds %struct.mps_command, %struct.mps_command* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to %struct.TYPE_2__*
  store %struct.TYPE_2__* %9, %struct.TYPE_2__** %5, align 8
  %10 = load %struct.mps_softc*, %struct.mps_softc** %3, align 8
  %11 = load %struct.mps_command*, %struct.mps_command** %4, align 8
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %5, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mps_print_sgl(%struct.mps_softc* %10, %struct.mps_command* %11, i32 %14)
  ret void
}

declare dso_local i32 @mps_print_sgl(%struct.mps_softc*, %struct.mps_command*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
